--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -197,6 +197,41 @@
   "numbers_added": "يوجد أرقام مضافة",
   "no_numbers": "لا توجد أرقام مضافة",
 
-  "Current_account":"الحساب الحالي",
-  "Loading_groups":"جاري تحميل المجموعات"
+  "Current_account": "الحساب الحالي",
+  "Loading_groups": "جاري تحميل المجموعات",
+
+  "scheduled_send_time": "وقت الإرسال المجدول",
+  "actions": "الإجراءات",
+  "view_full_message": "عرض كامل",
+  "view_full_message_description": "عرض النص الكامل للرسالة",
+  "edit_scheduled_message": "تعديل الرسالة المجدولة",
+  "edit_message_details": "قم بتعديل محتوى وتوقيت الرسالة",
+  "recipient_number_placeholder": "+963987654321",
+  "write_message_content": "اكتب محتوى الرسالة هنا...",
+  "scheduled_time_required": "وقت الإرسال مطلوب",
+  "scheduled_time_must_be_in_future": "وقت الإرسال يجب أن يكون في المستقبل",
+  "message_content_required": "محتوى الرسالة مطلوب",
+  "message_too_short": "الرسالة قصيرة جداً (الحد الأدنى 5 أحرف)",
+  "phone_number_required": "رقم الهاتف مطلوب",
+  "invalid_phone_number": "رقم الهاتف غير صحيح",
+  "save_changes": "حفظ التغييرات",
+  "saving_changes": "جاري الحفظ...",
+  "cancel": "إلغاء",
+  "close": "إغلاق",
+  "no_scheduled_messages": "لا توجد رسائل مجدولة",
+  "message_updated_successfully": "تم تحديث الرسالة بنجاح ",
+  "failed_to_update_message": "فشل في تحديث الرسالة",
+  "message_deleted_successfully": "تم حذف الرسالة بنجاح ",
+  "failed_to_delete_message": "فشل في حذف الرسالة",
+  "failed_to_fetch_scheduled_messages": "فشل في جلب الرسائل المجدولة",
+  "view_and_edit_scheduled_messages": "عرض وتعديل الرسائل المجدولة",
+
+  "no_data_to_display": "لا توجد بيانات للعرض",
+  "no_results_match": "لم يتم العثور على أي نتائج تطابق \"{query}\". جرب مصطلح بحث مختلف.",
+  "no_data_available": "لا توجد بيانات متاحة حالياً. يمكنك إضافة بيانات جديدة أو تحديث الصفحة.",
+  "clear_search": "مسح البحث",
+  "showing": "عرض",
+  "of": "من أصل",
+  "items": "عناصر",
+  "search_results_count": "{count} نتيجة بحث"
 }
