--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -197,5 +197,40 @@
   "no_numbers": "No numbers added",
 
   "Current_account":"Current account",
-  "Loading_groups":"Loading groups"
+  "Loading_groups":"Loading groups",
+
+  "scheduled_send_time": "Scheduled Send Time",
+  "actions": "Actions",
+  "view_full_message": "View Full",
+  "view_full_message_description": "View the full text of the message",
+  "edit_scheduled_message": "Edit Scheduled Message",
+  "edit_message_details": "Edit message content and schedule time",
+  "recipient_number_placeholder": "+963987654321",
+  "write_message_content": "Write your message here...",
+  "scheduled_time_required": "Scheduled time is required",
+  "scheduled_time_must_be_in_future": "Scheduled time must be in the future",
+  "message_content_required": "Message content is required",
+  "message_too_short": "Message is too short (minimum 5 characters)",
+  "phone_number_required": "Phone number is required",
+  "invalid_phone_number": "Invalid phone number",
+  "save_changes": "Save Changes",
+  "saving_changes": "Saving...",
+  "cancel": "Cancel",
+  "close": "Close",
+  "no_scheduled_messages": "No scheduled messages",
+  "message_updated_successfully": "Message updated successfully ",
+  "failed_to_update_message": "Failed to update message",
+  "message_deleted_successfully": "Message deleted successfully ",
+  "failed_to_delete_message": "Failed to delete message",
+  "failed_to_fetch_scheduled_messages": "Failed to fetch scheduled messages",
+  "view_and_edit_scheduled_messages": "View and edit scheduled messages",
+
+  "no_data_to_display": "No data to display",
+  "no_results_match": "No results match \"{query}\". Try a different search term.",
+  "no_data_available": "No data available at the moment. You can add new data or refresh the page.",
+  "clear_search": "Clear search",
+  "showing": "Showing",
+  "of": "of",
+  "items": "items",
+  "search_results_count": "{count} search results"
 }
