--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -1,8 +1,12 @@
 {
   "app_name": "واتساب",
   "login": "تسجيل الدخول",
+  "loginSuccess":"تم تسجيل الدخول بنجاح",
+  "loginFailed":"فشل تسجيل الدخول",
   "logout": "تسجيل الخروج",
   "register": "إنشاء حساب",
+  "fillAllFields": "يرجى ملء جميع الحقول",
+  "invalidCredentials": "هناك خطأ في كلمة المرور أو اسم المستخدم",
   "email": "البريد الإلكتروني",
   "password": "كلمة المرور",
   "name": "الاسم",
