--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -7,6 +7,13 @@
   "register": "إنشاء حساب",
   "fillAllFields": "يرجى ملء جميع الحقول",
   "invalidCredentials": "هناك خطأ في كلمة المرور أو اسم المستخدم",
+  "enterName": "يرجى إدخال الاسم",
+  "enterEmail": "يرجى إدخال البريد الإلكتروني",
+  "enterPhone": "يرجى إدخال رقم الهاتف",
+  "enterPassword": "يرجى إدخال كلمة المرور",
+  "passwordMinLength": "كلمة المرور يجب أن تكون على الأقل 6 أحرف",
+  "registrationSuccess": "تم التسجيل بنجاح!",
+  "registrationFailed": "فشل في التسجيل",
   "email": "البريد الإلكتروني",
   "password": "كلمة المرور",
   "name": "الاسم",
