--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -5,6 +5,13 @@
   "loginFailed":"login Failed",
   "fillAllFields": "Please fill in all fields",
   "invalidCredentials": "There is an error in the password or username",
+  "enterName": "Please enter your name",
+  "enterEmail": "Please enter your email address",
+  "enterPhone": "Please enter your phone number",
+  "enterPassword": "Please enter a password",
+  "passwordMinLength": "Password must be at least 6 characters",
+  "registrationSuccess": "Registration successful!",
+  "registrationFailed": "Registration failed",
   "logout": "logout",
   "register": "Register",
   "email": "Email",
