--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -10,6 +10,7 @@
   "enterPhone": "Please enter your phone number",
   "enterPassword": "Please enter a password",
   "passwordMinLength": "Password must be at least 6 characters",
+  "no_accounts": "No accounts available",
   "registrationSuccess": "Registration successful!",
   "registrationFailed": "Registration failed",
   "logout": "logout",
@@ -22,6 +23,7 @@
   "noAccountYet": "Don't have an account yet?",
   "language": "Language",
   "contactSupport": "Contact Support",
+  "linked_accounts": "Linked Accounts",
   "dashboard": "Dashboard",
   "status": "Status",
   "home": "Home",
