--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -1,8 +1,8 @@
 {
   "app_name": "واتساب",
   "login": "تسجيل الدخول",
-  "loginSuccess":"تم تسجيل الدخول بنجاح",
-  "loginFailed":"فشل تسجيل الدخول",
+  "loginSuccess": "تم تسجيل الدخول بنجاح",
+  "loginFailed": "فشل تسجيل الدخول",
   "logout": "تسجيل الخروج",
   "register": "إنشاء حساب",
   "fillAllFields": "يرجى ملء جميع الحقول",
@@ -273,7 +273,7 @@
   "valid_phone_number_required": "يرجى إدخال رقم هاتف صحيح",
   "send": "الإرسال",
   "schedule": "الجدولة",
-  "error_occurred": "حدث خطأ أثناء"  ,
+  "error_occurred": "حدث خطأ أثناء",
 
   "send_time_future": "يجب أن يكون وقت الإرسال في المستقبل",
 
@@ -309,5 +309,50 @@
   "add_new_auto_reply": "إضافة رد تلقائي جديد",
   "create_new_auto_reply": "أنشئ رد تلقائي جديد",
   "add_auto_reply": "إضافة رد تلقائي",
-  "auto_replies_list": "قائمة الردود التلقائية"
+  "auto_replies_list": "قائمة الردود التلقائية",
+
+  "template_management": "إدارة القوالب",
+  "manage_templates_and_people": "إدارة القوالب والأفراد المرتبطين بها",
+  "add_new_template": "إضافة قالب جديد",
+  "template_name": "اسم القالب",
+  "description_optional": "الوصف (اختياري)",
+  "add_template": "إضافة قالب",
+  "add_person_to_template": "إضافة شخص إلى القالب",
+  "person_name": "اسم الشخص",
+  "phone_number": "رقم الهاتف",
+  "add_person": "إضافة شخص",
+  "no_template_selected": "لم يتم اختيار قالب",
+  "select_template_to_manage": "اختر قالب لبدء الإضافة والتعديل عليه",
+  "template_added_successfully": "تم إضافة القالب بنجاح",
+  "template_updated_successfully": "تم تحديث القالب بنجاح",
+  "template_deleted_successfully": "تم حذف القالب بنجاح",
+  "template_name_required": "اسم القالب مطلوب",
+  "name_and_phone_required": "الاسم ورقم الهاتف مطلوبان",
+  "person_removed": "تم إزالة الشخص",
+  "copied_all_data": "تم نسخ جميع البيانات",
+  "failed_to_fetch_templates": "فشل في جلب القوالب",
+  "failed_to_add_template": "فشل في إضافة القالب",
+  "failed_to_save_template": "فشل في حفظ القالب",
+  "failed_to_update_template": "فشل في تحديث القالب",
+  "failed_to_delete_template": "فشل في حذف القالب",
+  "template_name_placeholder": "مثال: صباح الخير",
+  "template_description_placeholder": "وصف مختصر للقالب",
+  "please_try_again_later": "يرجى المحاولة لاحقًا.",
+
+  "template_id_not_found": "معرف القالب غير موجود",
+  "error_occurred_during_deletion": "حدث خطأ أثناء الحذف",
+  "person_updated_successfully": "تم تحديث الشخص بنجاح",
+  "failed_to_update_person": "فشل في تحديث الشخص.",
+  "manage_people_and_groups_lists": "إدارة قوائم الأشخاص والمجموعات",
+  "search_in_templates_and_people": "البحث في القوالب والأشخاص",
+  "total_templates": "إجمالي القوالب",
+  "total_people": "إجمالي الأشخاص",
+  "copy_data": "نسخ البيانات",
+  "copy_all_data": "نسخ جميع البيانات",
+  "copy_number": "نسخ الرقم",
+  "confirm_deletion": "تأكيد الحذف",
+  "delete_template_confirmation": "هل أنت متأكد من حذف هذا القالب؟ سيتم حذف جميع الأشخاص المرتبطين به.",
+  "delete_person_confirmation": "هل أنت متأكد من حذف هذا الشخص؟",
+  "start_by_creating_new_template": "ابدأ بإنشاء قالب جديد",
+  "template_update_error_generic": "حدث خطأ أثناء تحديث القالب"
 }
