--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -308,5 +308,50 @@
   "add_new_auto_reply": "Add New Auto Reply",
   "create_new_auto_reply": "Create a new auto reply",
   "add_auto_reply": "Add Auto Reply",
-  "auto_replies_list": "Auto Replies List"
+  "auto_replies_list": "Auto Replies List",
+
+  "template_management": "Template Management",
+  "manage_templates_and_people": "Manage templates and associated people",
+  "add_new_template": "Add New Template",
+  "template_name": "Template Name",
+  "description_optional": "Description (optional)",
+  "add_template": "Add Template",
+  "add_person_to_template": "Add a person to the template",
+  "person_name": "Person Name",
+  "phone_number": "Phone Number",
+  "add_person": "Add Person",
+  "no_template_selected": "No template selected",
+  "select_template_to_manage": "Select a template to start adding and managing",
+  "template_added_successfully": "Template added successfully",
+  "template_updated_successfully": "Template updated successfully",
+  "template_deleted_successfully": "Template deleted successfully",
+  "template_name_required": "Template name is required",
+  "name_and_phone_required": "Name and phone are required",
+  "person_removed": "Person removed",
+  "copied_all_data": "All data copied",
+  "failed_to_fetch_templates": "Failed to fetch templates",
+  "failed_to_add_template": "Failed to add template",
+  "failed_to_update_template": "Failed to update template",
+  "failed_to_delete_template": "Failed to delete template",
+  "template_name_placeholder": "Example: Good Morning",
+  "template_description_placeholder": "Short description for this template",
+  "failed_to_save_template": "Failed to save template",
+  "please_try_again_later": "Please try again later.",
+
+  "template_id_not_found": "Template ID not found",
+  "error_occurred_during_deletion": "An error occurred during deletion",
+  "person_updated_successfully": "Person updated successfully",
+  "failed_to_update_person": "Failed to update person.",
+  "manage_people_and_groups_lists": "Manage People and Groups Lists",
+  "search_in_templates_and_people": "Search in templates and people",
+  "total_templates": "Total Templates",
+  "total_people": "Total People",
+  "copy_data": "Copy Data",
+  "copy_all_data": "Copy All Data",
+  "copy_number": "Copy Number",
+  "confirm_deletion": "Confirm Deletion",
+  "delete_template_confirmation": "Are you sure you want to delete this template? All associated people will be deleted.",
+  "delete_person_confirmation": "Are you sure you want to delete this person?",
+  "start_by_creating_new_template": "Start by creating a new template",
+  "template_update_error_generic": "An error occurred while updating the template"
 }
