--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -354,5 +354,114 @@
   "delete_template_confirmation": "هل أنت متأكد من حذف هذا القالب؟ سيتم حذف جميع الأشخاص المرتبطين به.",
   "delete_person_confirmation": "هل أنت متأكد من حذف هذا الشخص؟",
   "start_by_creating_new_template": "ابدأ بإنشاء قالب جديد",
-  "template_update_error_generic": "حدث خطأ أثناء تحديث القالب"
+  "template_update_error_generic": "حدث خطأ أثناء تحديث القالب",
+
+  "navbarfeatures": "المميزات",
+  "navbarpricing": "الأسعار",
+  "navbarfaq": "الأسئلة الشائعة",
+  "navbarcontact_us": "اتصل بنا",
+  "navbarlogin": "تسجيل الدخول",
+  "navbarget_started": "ابدأ مجاناً",
+  "navbarneed_help": "تحتاج مساعدة؟",
+  "navbarcontact_support": "تواصل مع الدعم الفني",
+
+  "hero_sectionbest_in_whatsapp": "الأفضل في إرسال رسائل واتساب",
+  "hero_sectionsend_messages": "أرسل رسائل واتساب",
+  "hero_sectioneasy_and_professional": "بكل سهولة واحترافية",
+  "hero_sectiondescription": "منصة متكاملة وموثوقة لإرسال رسائل واتساب برمجياً مع واجهة برمجية قوية ومرنة. ابدأ الآن واستمتع بسرعة وأمان لا مثيل لهما.",
+  "hero_sectionget_started": "ابدأ الآن مجاناً",
+  "hero_sectionwatch_demo": "شاهد العرض التوضيحي",
+  "hero_sectiondelivery_rate": "معدل التسليم",
+  "hero_sectionmessages_per_day": "رسالة يومياً",
+  "hero_sectioncustomer_support": "دعم فني",
+  "hero_sectionconnected": "متصل",
+  "hero_sectionmessage_1": "مرحباً! شكراً لاختيارك خدمتنا",
+  "hero_sectionmessage_2": "رائع! كيف يمكنني البدء؟",
+  "hero_sectionmessage_3": "سنرسل لك رمز التفعيل خلال ثوانٍ",
+
+  "featuresexceptional_features": "مميزات استثنائية",
+  "featurescomprehensive_features": "اكتشف مجموعة شاملة من المميزات المتقدمة التي تجعل إرسال رسائل واتساب أسهل وأكثر فعالية",
+  "featureslearn_more": "تعرف على المزيد",
+  "featureseasy_api_integration": "واجهة برمجية سهلة الاستخدام والتكامل",
+  "featureseasy_api_integration_desc": "API قوي ومرن يمكن دمجه بسهولة مع أنظمتك الحالية",
+  "featuresfull_data_protection": "حماية كاملة لبياناتك وخصوصية عملائك",
+  "featuresfull_data_protection_desc": "تشفير متقدم وحماية شاملة لجميع البيانات المرسلة",
+  "featureshigh_speed_delivery": "إرسال آلاف الرسائل في ثوانٍ معدودة",
+  "featureshigh_speed_delivery_desc": "سرعة فائقة في الإرسال مع ضمان الوصول",
+  "featuresmarketing_without_block": "إعلانات بدون حظر",
+  "featuresmarketing_without_block_desc": "إرسال إعلانات دون التعرض للحظر من واتساب",
+  "featuressmart_auto_replies": "رد تلقائي ذكي",
+  "featuressmart_auto_replies_desc": "نظام ذكي للردود التلقائية مع تخصيص كامل",
+  "featuresbulk_messaging": "إرسال جماعي متقدم",
+  "featuresbulk_messaging_desc": "إرسال لآلاف المستقبلين مع إدارة ذكية للقوائم",
+
+  "pricingsection_title": "خطط تناسب جميع الاحتياجات",
+  "pricingsection_description": "اختر الخطة المناسبة لك مع مرونة كاملة للترقية أو التخفيض في أي وقت",
+  "pricingmost_popular": "الأكثر شعبية",
+  "pricingplan_start": "خطة البداية",
+  "pricingplan_start_price": "مجاني",
+  "pricingplan_start_period": "إلى الأبد",
+  "pricingfeature_1_start": "استخدام رقم هاتف واحد",
+  "pricingfeature_2_start": "100 رسالة شهرياً",
+  "pricingfeature_3_start": "دعم فني أساسي",
+  "pricingfeature_4_start": "واجهة برمجية محدودة",
+  "pricingget_started_free": "ابدأ مجاناً",
+  "pricingplan_basic": "الخطة الأساسية",
+  "pricingplan_basic_price": "180 ل.س",
+  "pricingplan_basic_period": "شهرياً",
+  "pricingfeature_1_basic": "استخدام أي رقم هاتف",
+  "pricingfeature_2_basic": "5,000 رسالة شهرياً",
+  "pricingfeature_3_basic": "جميع أنواع الرسائل",
+  "pricingfeature_4_basic": "دعم فني متقدم",
+  "pricingfeature_5_basic": "تقارير مفصلة",
+  "pricingplan_pro": "الخطة الاحترافية",
+  "pricingplan_pro_price": "300 ل.س",
+  "pricingplan_pro_period": "شهرياً",
+  "pricingfeature_1_pro": "أرقام غير محدودة",
+  "pricingfeature_2_pro": "رسائل غير محدودة",
+  "pricingfeature_3_pro": "ميزات متقدمة",
+  "pricingfeature_4_pro": "دعم أولوية 24/7",
+  "pricingfeature_5_pro": "تكامل مخصص",
+  "pricingfeature_6_pro": "إدارة فرق",
+  "pricingsubscribe_now": "اشترك الآن",
+
+  "faqcommon_questions": "الأسئلة الأكثر شيوعاً",
+  "faqcomprehensive_answers": "إجابات شاملة على أهم الأسئلة التي قد تخطر ببالك",
+  "faqhow_to_start": "كيف يمكنني البدء في استخدام الخدمة؟",
+  "faqhow_to_start_desc": "يمكنك البدء فوراً بالتسجيل والحصول على مفتاح API الخاص بك. نوفر دليل شامل وأمثلة كاملة للتكامل.",
+  "faqcan_use_business_account": "هل يمكنني استخدام الخدمة مع رقم واتساب تجاري؟",
+  "faqcan_use_business_account_desc": "نعم، تدعم خدمتنا جميع أنواع حسابات واتساب بما في ذلك الحسابات التجارية والشخصية.",
+  "faqblock_risk": "هل هناك خطر من حظر حسابي على واتساب؟",
+  "faqblock_risk_desc": "خدمتنا مطابقة تماماً لسياسات واتساب ونستخدم تقنيات متقدمة لحماية حسابك من الحظر.",
+  "faqtrial_benefits": "كيف يمكنني الاستفادة من الفترة التجريبية؟",
+  "faqtrial_benefits_desc": "يمكنك البدء فوراً بالخطة المجانية التي تتيح لك إرسال 100 رسالة شهرياً لاستكشاف جميع المزايا.",
+  "faqintegration_with_systems": "هل يمكنني تكامل الخدمة مع أنظمتي الحالية؟",
+  "faqintegration_with_systems_desc": "بالطبع! نوفر واجهة برمجية شاملة مع وثائق مفصلة ومكتبات جاهزة لجميع لغات البرمجة الشائعة.",
+  "faqno_answer": "لم تجد إجابة لسؤالك؟",
+  "faqcontact_support": "تواصل مع الدعم الفني",
+
+  "contactready_to_start": "جاهز للبدء؟",
+  "contactjoin_our_customers": "انضم إلى آلاف العملاء الذين يثقون بخدمتنا لإرسال رسائل واتساب بفعالية",
+  "contactcall_us": "اتصل بنا",
+  "contacturgent_inquiries": "للاستفسارات العاجلة والدعم المباشر",
+  "contactmessage_us": "راسلنا",
+  "contactdetailed_inquiries": "للاستفسارات التفصيلية والدعم التقني",
+  "contactcontact_via_whatsapp": "تواصل عبر WhatsApp",
+  "contactsend_email": "أرسل رسالة إلكترونية",
+
+  "footercompany_description": "منصة رائدة في مجال إرسال رسائل واتساب برمجياً، نوفر حلول متقدمة وموثوقة للشركات والأفراد.",
+  "footerquick_links": "روابط سريعة",
+  "footerfeatures": "المميزات",
+  "footerpricing": "الأسعار",
+  "footerfaq": "الأسئلة الشائعة",
+  "footerdocumentation": "الوثائق",
+  "footersupport": "الدعم",
+  "footerhelp_center": "مركز المساعدة",
+  "footercontact_us": "تواصل معنا",
+  "footerreport_issue": "ابلاغ مشكلة",
+  "footerservice_status": "حالة الخدمة",
+  "footerrights_reserved": "جميع الحقوق محفوظة.",
+  "footerprivacy_policy": "سياسة الخصوصية",
+  "footerterms_of_use": "شروط الاستخدام",
+  "footercookies": "ملفات تعريف الارتباط"
 }
