--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,8 +1,8 @@
 {
   "app_name": "whatsapp",
   "login": "Login",
-  "loginSuccess":"login Success",
-  "loginFailed":"login Failed",
+  "loginSuccess": "login Success",
+  "loginFailed": "login Failed",
   "fillAllFields": "Please fill in all fields",
   "invalidCredentials": "There is an error in the password or username",
   "enterName": "Please enter your name",
@@ -209,8 +209,8 @@
   "numbers_added": "Numbers have been added",
   "no_numbers": "No numbers added",
 
-  "Current_account":"Current account",
-  "Loading_groups":"Loading groups",
+  "Current_account": "Current account",
+  "Loading_groups": "Loading groups",
 
   "scheduled_send_time": "Scheduled Send Time",
   "actions": "Actions",
@@ -353,5 +353,114 @@
   "delete_template_confirmation": "Are you sure you want to delete this template? All associated people will be deleted.",
   "delete_person_confirmation": "Are you sure you want to delete this person?",
   "start_by_creating_new_template": "Start by creating a new template",
-  "template_update_error_generic": "An error occurred while updating the template"
+  "template_update_error_generic": "An error occurred while updating the template",
+
+  "navbarfeatures": "Features",
+  "navbarpricing": "Pricing",
+  "navbarfaq": "FAQ",
+  "navbarcontact_us": "Contact Us",
+  "navbarlogin": "Login",
+  "navbarget_started": "Get Started",
+  "navbarneed_help": "Need help?",
+  "navbarcontact_support": "Contact support",
+
+  "hero_sectionbest_in_whatsapp": "Best in WhatsApp Messaging",
+  "hero_sectionsend_messages": "Send WhatsApp Messages",
+  "hero_sectioneasy_and_professional": "Easily and Professionally",
+  "hero_sectiondescription": "A comprehensive and reliable platform for sending WhatsApp messages programmatically with a powerful and flexible API. Start now and enjoy unmatched speed and security.",
+  "hero_sectionget_started": "Get Started Free",
+  "hero_sectionwatch_demo": "Watch Demo",
+  "hero_sectiondelivery_rate": "Delivery Rate",
+  "hero_sectionmessages_per_day": "Messages per day",
+  "hero_sectioncustomer_support": "Customer Support",
+  "hero_sectionconnected": "Connected",
+  "hero_sectionmessage_1": "Hi! Thank you for choosing our service",
+  "hero_sectionmessage_2": "Awesome! How do I get started?",
+  "hero_sectionmessage_3": "We'll send you the activation code in seconds",
+
+  "featuresexceptional_features": "Exceptional Features",
+  "featurescomprehensive_features": "Discover a comprehensive set of advanced features that make sending WhatsApp messages easier and more efficient",
+  "featureslearn_more": "Learn More",
+  "featureseasy_api_integration": "Easy API Integration",
+  "featureseasy_api_integration_desc": "A powerful and flexible API that can be easily integrated with your existing systems",
+  "featuresfull_data_protection": "Full Data Protection",
+  "featuresfull_data_protection_desc": "Advanced encryption and full protection for all sent data",
+  "featureshigh_speed_delivery": "High-Speed Delivery",
+  "featureshigh_speed_delivery_desc": "Send thousands of messages in seconds with guaranteed delivery",
+  "featuresmarketing_without_block": "Marketing Without Blocking",
+  "featuresmarketing_without_block_desc": "Send promotions without getting blocked by WhatsApp",
+  "featuressmart_auto_replies": "Smart Auto Replies",
+  "featuressmart_auto_replies_desc": "Intelligent auto-reply system with full customization",
+  "featuresbulk_messaging": "Bulk Messaging",
+  "featuresbulk_messaging_desc": "Send messages to thousands of recipients with smart list management",
+
+  "pricingsection_title": "Plans for every need",
+  "pricingsection_description": "Choose the right plan for you with full flexibility to upgrade or downgrade anytime",
+  "pricingmost_popular": "Most Popular",
+  "pricingplan_start": "Startup Plan",
+  "pricingplan_start_price": "Free",
+  "pricingplan_start_period": "forever",
+  "pricingfeature_1_start": "1 phone number",
+  "pricingfeature_2_start": "100 monthly messages",
+  "pricingfeature_3_start": "Basic support",
+  "pricingfeature_4_start": "Limited API access",
+  "pricingget_started_free": "Get Started Free",
+  "pricingplan_basic": "Basic Plan",
+  "pricingplan_basic_price": "$180",
+  "pricingplan_basic_period": "monthly",
+  "pricingfeature_1_basic": "Any phone number",
+  "pricingfeature_2_basic": "5,000 monthly messages",
+  "pricingfeature_3_basic": "All message types",
+  "pricingfeature_4_basic": "Advanced support",
+  "pricingfeature_5_basic": "Detailed reports",
+  "pricingplan_pro": "Professional Plan",
+  "pricingplan_pro_price": "$300",
+  "pricingplan_pro_period": "monthly",
+  "pricingfeature_1_pro": "Unlimited numbers",
+  "pricingfeature_2_pro": "Unlimited messages",
+  "pricingfeature_3_pro": "Advanced features",
+  "pricingfeature_4_pro": "Priority 24/7 support",
+  "pricingfeature_5_pro": "Custom integrations",
+  "pricingfeature_6_pro": "Team management",
+  "pricingsubscribe_now": "Subscribe Now",
+
+  "faqcommon_questions": "Most Common Questions",
+  "faqcomprehensive_answers": "Comprehensive answers to the most common questions in your mind",
+  "faqhow_to_start": "How can I start using the service?",
+  "faqhow_to_start_desc": "You can start immediately by signing up and getting your own API key. We provide a comprehensive guide and full integration examples.",
+  "faqcan_use_business_account": "Can I use the service with a WhatsApp Business account?",
+  "faqcan_use_business_account_desc": "Our service supports all types of WhatsApp accounts including business and personal accounts.",
+  "faqblock_risk": "Is there a risk of my WhatsApp account being blocked?",
+  "faqblock_risk_desc": "Our service fully complies with WhatsApp policies and uses advanced techniques to protect your account from blocking.",
+  "faqtrial_benefits": "How can I benefit from the trial period?",
+  "faqtrial_benefits_desc": "You can start with our free plan that allows you to send 100 messages monthly to explore all features.",
+  "faqintegration_with_systems": "Can I integrate the service with my current systems?",
+  "faqintegration_with_systems_desc": "Of course! We offer a comprehensive API with detailed documentation and ready libraries for all popular programming languages.",
+  "faqno_answer": "Didn't find an answer to your question?",
+  "faqcontact_support": "Contact support",
+
+  "contactready_to_start": "Ready to start?",
+  "contactjoin_our_customers": "Join thousands of customers who trust our service for effective WhatsApp messaging",
+  "contactcall_us": "Call Us",
+  "contacturgent_inquiries": "For urgent inquiries and direct support",
+  "contactmessage_us": "Message Us",
+  "contactdetailed_inquiries": "For detailed inquiries and technical support",
+  "contactcontact_via_whatsapp": "Contact via WhatsApp",
+  "contactsend_email": "Send an email",
+
+  "footercompany_description": "A leading platform for programmatic WhatsApp messaging, providing advanced and reliable solutions for businesses and individuals.",
+  "footerquick_links": "Quick Links",
+  "footerfeatures": "Features",
+  "footerpricing": "Pricing",
+  "footerfaq": "FAQ",
+  "footerdocumentation": "Documentation",
+  "footersupport": "Support",
+  "footerhelp_center": "Help Center",
+  "footercontact_us": "Contact Us",
+  "footerreport_issue": "Report an Issue",
+  "footerservice_status": "Service Status",
+  "footerrights_reserved": "All rights reserved.",
+  "footerprivacy_policy": "Privacy Policy",
+  "footerterms_of_use": "Terms of Use",
+  "footercookies": "Cookies"
 }
