--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -462,5 +462,26 @@
   "footerrights_reserved": "All rights reserved.",
   "footerprivacy_policy": "Privacy Policy",
   "footerterms_of_use": "Terms of Use",
-  "footercookies": "Cookies"
+  "footercookies": "Cookies",
+
+  "manageYourWhatsappLikeNeverBefore": "Manage your WhatsApp like never before",
+  "welcomeBack": "Welcome back",
+  "loginToAccessYourAccount": "Login to access your account",
+  "emailOrUsername": "Email or username",
+  "enterEmailOrUsername": "Enter email or username",
+
+  "WhatsApp_Dashboard": "WhatsApp Dashboard",
+  "Business_Communication_Hub": "Business Communication Hub",
+  "Secure_Encrypted": " Secure & Encrypted",
+  "Real_time_Analytics": " Real-time Analytics",
+  "Multi_device_Support": " Multi-device Support",
+
+  "createAccount": "Create your account",
+  "fillInYourDetailsToGetStarted": "Fill in your details to get started",
+  "startYourJourneyToday": "Start your journey today",
+  "Join_Our_Community": "Join our community",
+  "Free_30_day_trial": "Free 30-day trial",
+  "_Customer_Support": "24/7 customer support",
+  "Advanced_Analytics_Dashboard": "Advanced analytics dashboard",
+  "No_Setup_Fees": "No setup fees"
 }
