--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -484,5 +484,8 @@
   "Free_30_day_trial": "تجربة مجانية لمدة 30 يوماً",
   "_Customer_Support": "دعم فني على مدار الساعة",
   "Advanced_Analytics_Dashboard": "لوحة تحليلات متقدمة",
-  "No_Setup_Fees": "بدون رسوم إعداد"
+  "No_Setup_Fees": "بدون رسوم إعداد",
+
+  "navbartheme": "تبديل المظهر",
+  "navbarlanguage": "تغيير اللغة"
 }
